# ros_testing

catkin_ws/devel/: .catkin  .rosinstall  local_setup.sh
catkin_ws/devel/lib/pkgconfig/: robot_description.pc
catkin_ws/devel/share/robot_description/cmake/: robot_descriptionConfig.cmake
catkin_ws/src/robot_description/: package.xml
catkin_ws/src/robot_description/launch/: gazebo.launch  rviz.launch
catkin_ws/src/robot_description/rviz/: config.rviz
catkin_ws/src/robot_description/urdf/: description.xacro
